--- a/partials/bag.html
+++ b/partials/bag.html
@@ -1,10 +1,10 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-sm-6">
-      <h1>My Shopping Bag</h1>
+      <h2>My Shopping Bag</h2>
     </div>
     <div class="col-sm-6">
-      <h1 class="pull-right">Order total: {{bag.total | currency}}</h1>
+      <h2 class="pull-right">Order total: {{bag.total | currency}}</h2>
     </div>
   </div>
 </div>
@@ -18,8 +18,10 @@
     <tbody>
       <tr ng-repeat="tea in bag.contents">
         <td>
-          <h2 class="col-6-sm">{{tea.name}}</h2>
-          <img src="{{tea.imageUrl}}" alt="no image available" />
+          <h3 class="col-6-sm">{{tea.name}}</h3>
+          <div class="row">
+            <img src="{{tea.imageUrl}}" alt="no image available" />
+          </div>
           <label>Caffeine Scale: </label>
           {{tea.caffeineScale}} <br>
           <label>Ingredients: </label>
@@ -29,7 +31,7 @@
         </td>
         <td>
           <span ng-show="tea.showQuant">{{tea.quant}}</span>
-          <input ng-model="tea.quant" type="number" ng-show="!tea.showQuant">
+          <input class="quantInput" ng-model="tea.quant" type="number" ng-show="!tea.showQuant">
         </td>
         <td>{{(tea.price | decimal) * tea.quant | currency}}</td>
         <td>
